# personal-work

./: .gitattributes  .gitignore  README.md
GarbageCollectors1/: .htaccess  README.md  config.php
android/: README.md
cpp/: README.md
cursor-generated/: game.js  index.html
cursor-generated/lang2/: .clangd  .gitignore  CMakeLists.txt  Makefile  examples.monkey
cursor-generated/lang2/src/: ast.h  builtins.cpp  builtins.h  environment.cpp  environment.h  evaluator.cpp  evaluator.h  lexer.cpp  main.cpp  object.cpp  object.h  parser.cpp  parser.h  token.cpp  token.h
cursor-generated/lang3/: CMakeLists.txt  Makefile  examples.ad
cursor-generated/lang3/.cursor/plans/: coroutines-virtual-threads-plan_dd28cdca.plan.md  interpreter-preemption-plan_de7c4d6c.plan.md
cursor-generated/lang3/.cursor/skills/monkeycpp-interpreter/: SKILL.md
cursor-generated/lang3/src/: ast.h  builtins.cpp  environment.cpp  environment.h  evaluator.cpp  evaluator.h  lexer.cpp  lexer.h  main.cpp  object.cpp  object.h  parser.h  scheduler.cpp  scheduler.h  stack_thread.cpp  stack_thread.h  token.cpp  token.h
cursor-generated/lang3/tests/: async_await.ad  parallel_delay_cancel_many.ad  parallel_delay_many_tasks.ad  parallel_delay_nested_spawn.ad  parallel_delay_spawn_async_mix.ad  parallel_delay_staggered.ad  parallel_threads.ad  preemption_cancel.ad  preemption_fairness.ad  sequential_fib.monkey  test01.ad  test01.monkey
groovy/: README.md  syntax001.groovy  syntax002.groovy  syntax003.groovy  syntax004.groovy  syntax005.groovy
javascript/: README.md
kotelin/: README.md
(+3778 files in other folders)
